# downScaleML

./: .gitignore  README.md  conda-lock.yml  environment.yml  pyproject.toml
Notebooks/: tasmean.ipynb
downscaleml/core/: clustering.py  dataset.py  hpo.py  utils.py
downscaleml/main/: CHELSA_SEAS5_STAGE1.py  ESRGAN_LPS_reanalysis.py  ESRGAN_predictor_LPS.py  ESRGAN_small_area_central_region_tester.py  HAT_trainer_128x128_patch_stage_2_hpo_dev.py  config.py  config_reanalysis_dev.py  config_reanalysis_dev_no_slide.py  config_reanalysis_dev_stage_1.py  config_reanalysis_dev_stage_2.py  emo1_config_reanalysis_dev.py  emo1_downscaling_reanalysis_refactoring.py  grid_search_downScale.py  importer.py  lgb_GPU_cluster_training_only.ipynb  lgb_GPU_downscaling.ipynb  lgb_train_GPU_cluster_hpo.py  lgb_train_GPU_cluster_hpo_correction.py  pr_32_scheduler_frequency.py  tester_prototype_stage2.py  trainer_128x128_patch_stage_2_hpo_dev.py
scripts/: run_models.sh
tests/: test_imports.py
