[tool.poetry]
name = "downscaleml"
version = "0.1.0"
description = "Climate downscaling module which acts as input to the WFlow_SBM model developed by EURAC Research, Italy for the intertwin Project"
authors = ["Suriyah Dhinakaran"]
license = "GNU GPL V3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
dask = {extras = ["dataframe"], version = "^2024.5.1"}
joblib = "^1.4.2"
GDAL = "3.4.3"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
torch = "^2.3.0"
xarray = "^2024.5.0"
matplotlib = "^3.9.0"
xgboost = "^2.0.3"
lightgbm = "^4.3.0"
cdo = "^1.6.0"
optuna = "^3.6.1"
pillow = "^10.3.0"
plotly = "^5.22.0"
rioxarray = "^0.15.5"
wheel = "^0.43.0"
ipython = "^8.24.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:pkg_resources is deprecated:DeprecationWarning"
]
