[tool.poetry]
name = "downscaleml"
version = "5.0.0"
description = "Downscaling Climate Data"
authors = ["Suriyah Dhinakaran, Daniel Frisinghelli"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^1.26.1"
pandas = "=1.5.3"
scikit-learn = "^1.3.2"
setuptools = "^68.2.2"
torch = "^2.1.0"
xarray = "=2023.3.0"
xgboost = "^2.0.1"
lightgbm = "^4.1.0"
joblib = "^1.3.2"
dask = "^2023.10.1"
matplotlib = "3.7.1"
cdo = "^1.6.0"
cdsapi = "^0.6.1"
netcdf4 = "^1.6.5"
h5py = "^3.10.0"
h5netcdf = "^1.2.0"
statsmodels = "^0.14.0"
mlflow = "^2.20.2"
optuna = "^4.2.1"
optuna-integration = "^4.2.1"
torchmetrics = "^1.6.1"
tensorboard = "^2.19.0"
pytorch-msssim = "^1.0.0"
scikit-image = "^0.25.2"


[[tool.poetry.source]]
name = "torch-cu"
url = "https://download.pytorch.org/whl/cu126"
priority = "primary"


[[tool.poetry.source]]
name = "torch_cu"
url = "https://download.pytorch.org/whl/cu126"
priority = "supplemental"


[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
